# crawler-executor

./: .dockerignore  AGENTS.md  Dockerfile  README.md  pyproject.toml  scrapy-distributed-crawler-feature.md  setup.py
.specify/: README.md
.specify/memory/: architecture.md  constitution.md  product.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
deploy/: README.md
deploy/environments/: README.md  production.env  staging.env
deploy/examples/: egress-seeds.example.txt  p0.env.example  p1.env.example
deploy/scripts/: build-container-image.sh  encode-redis-password.py  inspect-ip-health.sh  inspect-k8s-ip-pool.sh  m3-enqueue-debug-fetch-command.sh  p1-kafka-smoke.sh  p1-object-storage-smoke.sh  p2-enqueue-fetch-commands.sh  render-k8s-configmap-from-env.sh  render-k8s-daemonset-from-env.sh  run-egress-validation.sh  run-m3-health-probe-validation.sh  run-m3-k8s-daemonset-audit.sh  run-m3-k8s-pause-flag-validation.sh  run-m3-pause-flag-validation.sh  run-m3a-config-audit.sh  run-m3a-delayed-buffer-validation.sh  run-m3a-pacer-validation.sh  run-m3a-redis-boundary-validation.sh  run-m3a-soft-ban-feedback-validation.sh  run-m3a-sticky-pool-validation.sh  run-m4-deadline-validation.sh  run-m4-graceful-shutdown-validation.sh  run-m4-k8s-policy-config-audit.sh  run-m4-max-retries-validation.sh  run-m4-pause-validation.sh  run-m4-policy-lkg-validation.sh  run-m4-policy-reload-validation.sh  run-p0-soak.sh  (+12 more)
ops/: README.md  scale-fetching-runbook.md
specs/: roadmap-status.md
state/: changelog.md  current.md  roadmap.md
(+139 files in other folders)
